--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,7 +10,8 @@ build-job:
   script:
     - npm run-script build
   before_script:
-    - apt-get --yes --force-yes install nodejs
+    - apt-get update -qq
+    - apt-get -y install nodejs
     
 deploy_testing:
   type: deploy
@@ -24,7 +25,7 @@ deploy_testing:
   before_script:
     - apt-get update -qq
     - apt-get install -qq git
-    - apt-get --yes --force-yes install rsync
+    - apt-get -y install rsync
     # Setup SSH deploy keys
     - 'which ssh-agent || ( apt-get install -qq openssh-client )'
     - eval $(ssh-agent -s)
