--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ build-job:
     - npm run-script build
   before_script:
     - apt-get update -qq
+    - apt-get -y install npm nodejs
     - npm cache clean -f
     - sudo npm install -g n
     - sudo n stable
