CICD Wont work without build stage?

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,12 @@
 stages:
+  - build
   - deploy
 
+build-job:
+  stage: build
+  script:
+    - echo "OK"
+    
 deploy_testing:
   type: deploy
   environment:
