Changed backend URL
Nginx handled redirecting to the propper port on the server

--- a/IzvorniKod/.env.development
+++ b/IzvorniKod/.env.development
@@ -1,4 +1,4 @@
 NODE_ENV='development'
-REACT_APP_API_URL='https://sigma.domefan.club:5000/'
+REACT_APP_API_URL='https://api.sigma.domefan.club/'
 REACT_APP_IMAGE_PREFIX='/images/'
 REACT_APP_DEFAULT_AVATAR='juan.jpg'
