--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ deploy_testing:
       - develop
   environment:
     name: testing
-    url: $TESTING_DOMAIN
+    url: $TESTING_DOMAIN_NAME
   script:
     - ssh $SSH_USERNAME@$TESTING_DOMAIN "cd codeshark/ && ./redeploy_frontend_testing.sh"
   before_script:
@@ -26,7 +26,7 @@ deploy_production:
       - main
   environment:
     name: production
-    url: $DOMAIN
+    url: $DOMAIN_NAME
   script:
     - ssh $SSH_USERNAME@$DOMAIN "cd codeshark/ && ./redeploy_frontend_production.sh"
   before_script:
