--- a/IzvorniKod/package.json
+++ b/IzvorniKod/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.1",
     "env-cmd": "^10.1.0",
+    "kalend": "^0.4.0",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
