#11 Stvaranje natjecanja, povezan popis natjecanja na API single natjecanje page

--- a/IzvorniKod/.env.production
+++ b/IzvorniKod/.env.production
@@ -1,4 +1,5 @@
 NODE_ENV='production'
 REACT_APP_API_URL='https://api.domefan.club/'
 REACT_APP_IMAGE_PREFIX='https://cdn.domefan.club/images/'
+REACT_APP_TROPHY_PREFIX='https://cdn.domefan.club/trophy/'
 REACT_APP_DEFAULT_AVATAR='juan.jpg'
