--- a/IzvorniKod/package.json
+++ b/IzvorniKod/package.json
@@ -18,6 +18,7 @@
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.1",
     "sweetalert2": "^11.1.10",
     "sweetalert2-react-content": "^4.2.0",
     "web-vitals": "^1.1.2"
