--- a/IzvorniKod/package.json
+++ b/IzvorniKod/package.json
@@ -7,16 +7,20 @@
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@uiw/react-textarea-code-editor": "^1.4.15",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.1",
     "env-cmd": "^10.1.0",
+    "kalend": "^0.4.0",
     "react": "^17.0.2",
+    "react-calendar": "^3.5.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.1",
     "sweetalert2": "^11.1.10",
     "sweetalert2-react-content": "^4.2.0",
     "web-vitals": "^1.1.2"
